# image_visual_comparator

./: .containerignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: PR_checks.yaml  release.yaml
benches/: memory.rs
src/: compare.rs  lib.rs  main.rs
src/config/: mod.rs
src/errors/: handling.rs  ivc.rs  mod.rs
src/errors/internal/: mod.rs
src/models/: comparison_result.rs  image_holder.rs  mod.rs  pixel_coord.rs
src/test_utils/: mod.rs
src/utils/: colour.rs  file_paths.rs  files.rs  image.rs  logger.rs  mod.rs  validation.rs
src/utils/file_system/: mod.rs
src/utils/file_system/directories/: mod.rs
src/utils/file_system/files/: mod.rs
src/utils/file_system/images/: mod.rs
