[package]
name = "image_visual_comparator"
version = "0.5.0"
edition = "2021"
authors = ["D Sangster"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
image = "0.24.6"
lab = "0.11.0"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }

[dev-dependencies]
assert_fs = "1.0.13"
criterion = { version = "0.5.1", features = [
  "cargo_bench_support",
  "plotters",
  "rayon",
] }

[[bench]]
name = "memory"
harness = false

[profile.release]
debug = true
